--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,175 +1,255 @@
-*, html {
-    margin: 0;
-    padding: 0;
+@font-face {
+    font-family: BonvenoCF;
+    src: url(BonvenoCF-Light.otf);
 }
 @font-face {
-    font-family: Comforta;
-    src: url(Comfortaa-Light.ttf);
-}
-@font-face {
-    font-family: Adequate;
-    src: url(Adequate-ExtraLight.ttf);
-}
-@font-face {
-    font-family: Expressway;
-    src: url(exprswy_free.ttf);
-}
-@font-face {
-    font-family: GeosansLight;
+    font-family: GeoSans;
     src: url(GeosansLight.ttf);
 }
-@font-face {
-    font-family: WatchwordHairline;
-    src: url(Watchword_hairline_demo.otf);
+
+* {
+	margin: 0;
+	padding: 0;
+}
+body {
+	padding-top: 150px;
+	scroll-behavior: smooth;
+}
+button { 
+	outline: 0;
+	background: none;
+	border: 0;
 }
 
 
 
-body { background-color: #131313; }
-h1 {
-    font-family: 'WatchwordHairline'; font-size: 52px; font-style: normal;
-    color: #FFFFFF;
-    letter-spacing: 5px;
-    text-shadow: 2px 2px 5px #000000;
-    text-align: center;
-    padding-top: 70px;
+header {
+	width: 60%;
+	min-width: 375px;
+	height: 50px;
+	position: relative;
+	z-index: 99;
+	transition: box-shadow 0.5s;
+
+	margin: 0 auto;
 }
-h2 { font-size: 2.5em; }
-h3 { font-size: 2em; }
-h2, h3 {
-    font-family: 'WatchwordHairline'; 
-    font-style: normal;
-    color: #ffffff;
+.header-scrolled {
+	position: fixed;
+	top: 0;
+
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+
+	background-image: url("handmadepaper.png");
+	box-shadow: 0 8px 10px -10px rgba(0,0,0,0.7);
 }
-hr {
-    margin: auto;
-    margin-top: 100px;
-    width: 50%;
+
+.spacer {
+	height: 150px;
+	position: fixed;
+	top: 0;
+	width: 100%;
 }
-img {
-    display: block;
-    margin: 0 auto;
-    margin-top: 25px;
-    margin-bottom: 50px;
-    width: 70%;
+#header-content {
+	width: calc(100% + 20px);
+	
+	position: absolute;
+	bottom: -9px;
+	padding-left: -20px;
+	z-index: 99;
 }
+
+main {
+	width: 60%;
+	height: 1500px;
+	position: relative;
+	margin: 0 auto;
+	margin-top: 50px;
+	min-width: 375px;
+}
+.main-scrolled {
+	margin-top: 100px;
+}
+
+.main-divider {
+	opacity: 0.5;
+	background-size: 100%;
+	height: 20px;
+	overflow: hidden;
+	margin-left: -20px;
+}
+
+.main-divider-line {
+	width: calc(100% - 40px);
+	height: 2px;
+	float: left;
+	background-color: #000000;
+	opacity: 0.5;
+	margin-top: 9px;
+}
+
+.main-divider-left, .main-divider-right {
+	height: 20px;
+	width: 20px;
+	float: left;
+	background-size: contain;
+}
+.main-divider-left { background-image: url("images/decleft.png"); }
+.main-divider-right { background-image: url("images/decright.png"); }
+
+
+.sub-divider {
+	width: 350px;
+	height: 4px;
+	background-image: url("images/divider2.png");
+	margin: 0 auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	opacity: 0.3;
+}
+
+h1, h2 {
+	text-align: center;
+	color: #666666;
+	font-family: BonvenoCF;
+}
+h1 { 
+	display:inline; 
+	font-size: 1.25em;
+}
+h2 {
+	font-size: 1.1em;
+}
+
 p {
-    font-family: 'Comforta';
-    line-height: 30px;
-    color: #ffffff;
-    text-align: center;
-    vertical-align: middle;
+	margin: 0px 50px 50px 50px;
+	font-size: 1.25em;
 }
-.row {
-    height: 200px;
-    vertical-align: middle;
-
-    /*
-    border-style: solid;
-    border-color: #f8ff3a;
-    border-width: 1px 0px 1px 0px;
-    */
-
-    margin: 20px 0px 20px 0px;
+td { font-size: 1em; }
+p, td, button {
+	color: #888888;
+	font-family: GeoSans;
+	text-align: center;
 }
-.row img {
-    display: inline-block;
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    box-shadow: 2px 2px 10px #111111;
-    margin-left: 30px;
-}
-#content {
-    margin-left: 200px;
-    margin-right: 200px;
-    min-width: 750px;
-}
-
-.rowcontent {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: calc( 100% - 250px );
-    height:100%;
-    margin: 0px 15px 0px 15px;
-}
-.rowcontent strong {
-    font-weight: normal; 
-    font-size:20px;
-}
-.rowcontent span {
-    font-style: italic;
-    font-weight: normal;
-}
-
-
-.page {
-    position: absolute;
-    width: 75%;
-    margin: 0 auto;
-    right: 0;
-    left: 0;
-}
-
-/*divider*/
-.maindivider {
-    height: 1px;
-    width: 75%;
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    min-width: 750px;
-}
-.maindivider div { width: 25%; height: 100%; float:left; transition: width 0.5s;}
-.maindivider #pink { background-color: #ff23d3; }
-.maindivider #cyan { background-color: #1ef3ff; }
-.maindivider #yellow { background-color: #f8ff3a; }
-.maindivider #green { background-color: #86ff68; }
-
-.divider {
-    height: 1px;
-    width: 75%;
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    right: 0;
-    left: 0;
-}
-#pink.divider { background-color: #ff23d3; }
-#cyan.divider { background-color: #1ef3ff; }
-#yellow.divider { background-color: #f8ff3a; }
-#green.divider { background-color: #86ff68; }
-/*navbar*/
 ul {
-    margin: 0 auto;
-    padding: 0;
-    width: 300px;
+	text-align: center;
 }
 li {
-    display: inline;
-    float: center;
-    padding: 10px;
+	display: inline;
+	margin: 30px;
 }
 a {
-    color: #ffffff;
-    text-shadow: 2px 2px 5px #000000;
-    text-decoration: none;
-    font-family: 'Expressway'; font-size: 15px;
-    transition: color 0.5s;
+	text-decoration: none;
+	text-align: center;
+	color: #aaaaaa;
+	font-family: BonvenoCF;
+	font-size: 0.75em;
 }
-a:link, a:viisted, a:link:active, a:visited:active {
-    background-color: #ffffff;
+a:hover {
+	text-decoration:none;
 }
 
-.pinklink:active { color: #ff23d3; }
-.cyanlink:active { color: #1ef3ff; }
-.yellowlink:active { color: #f8ff3a; }
-.greenlink:active { color: #86ff68; }
+table {
+	width: 60%;
+	margin: 0 auto;
+	margin-top: 20px;
+}
+td {
+	text-align: center;
+	vertical-align: text-top;
+	padding: 5px;
+}
+td.left {
+	font-weight: bold;
+	width: 40%;
+	text-align: left;
+}
+td.right {
+	width: 60%;
+	text-align: right;
+}
+td.label {
+	width: 100%;
+	font-size: 1.1em;
+	font-weight: bold;
+}
 
-.pinklink:hover { color: #ff23d3; }
-.cyanlink:hover { color: #1ef3ff; }
-.yellowlink:hover { color: #f8ff3a; }
-.greenlink:hover { color: #86ff68; }
-a:hover { opacity:1; }
+
+.project_row {
+	width: 60%;
+	min-width: 500px;
+	margin: 0 auto;
+	margin-top: 20px;
+	overflow: auto;
+	position: relative;
+	border-bottom: 1px solid rgba(0,0,0,0.1);
+	border-right: 1px solid rgba(0,0,0,0.1);
+	box-shadow: 0 9px 16px -16px rgba(0,0,0,0.7);
+}
+.project_row * { display: inline; }
+.project_row > div > img, .project_row p { float: left; }
+.img_crop {
+	height: 75px;
+	width: 75px;
+	overflow: hidden;
+	background-color: #ff0000;
+}
+.img_crop img {
+	height: 50px;
+	width: 50px;
+	opacity: 0.5;
+	border-right: 1px solid rgba(0,0,0,0.2);
+	border-bottom: 1px solid rgba(0,0,0,0.2);
+
+	-webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
+.project_row p {
+	margin: 10px 20px 10px 20px;
+	padding: 0;
+	width: calc(100% - 241px);
+	text-align: left;
+
+	font-size: 1em;
+}
+.project_row button {
+	font-family: BonvenoCF;
+	font-size: 1em;
+}
+
+.btn_wrapper {
+	height: 100%;
+	width: 100px;
+	float: left;
+	
+	overflow: auto;
+	position: absolute;
+    right: 0;
+    top: 0;
+}
+.btn_wrapper > button {
+	height: 100%;
+	width: 50%;
+	float: right;
+	border-left: 1px solid rgba(0,0,0,0.2);
+	padding: 0;
+
+	transition: all ease 0.8s;
+}
+.btn_wrapper > button:hover {
+	box-shadow: inset 130px 0 0 0 #333333;
+}
+.btn_wrapper > button > img {
+	opacity: 0.6;
+	height: 25px;
+	width: 25px;
+
+	transition: all ease 0.8s;
+}
+.btn_wrapper > button:hover > img {
+	-webkit-filter: invert(100%);
+	filter: invert(100%);
+}
