--- a/stylesheet.css
+++ b/stylesheet.css
@@ -160,6 +160,7 @@ td {
 	text-align: center;
 	vertical-align: text-top;
 	padding: 5px;
+	padding-bottom: 15px;
 }
 td.left {
 	font-weight: bold;
@@ -176,12 +177,11 @@ td.label {
 	font-weight: bold;
 }
 
-
 .project_row {
 	width: 60%;
 	min-width: 500px;
 	margin: 0 auto;
-	margin-top: 20px;
+	margin-top: 30px;
 	overflow: auto;
 	position: relative;
 	border-bottom: 1px solid rgba(0,0,0,0.1);
